fix: composer regression on mobile

--- a/static/scss/composer.scss
+++ b/static/scss/composer.scss
@@ -326,7 +326,7 @@
 	}
 }
 
-@include media-breakpoint-up(sm) {
+@include media-breakpoint-up(lg) {
 	html.composing {
 		.composer {
 			left: 15%;
